# tm-trading-v73-current

./: .gitignore  CONTRIBUTING.md  README.md  RESEARCH.md  cache_self_management.sh  pyproject.toml
core/: __init__.py  config.py  logging.py  types.py
data/: __init__.py
docs/: DATA_LAYOUT.md  LESSONS_LEARNED.md  MULTI_AGENT_AUTOMATION_ROADMAP.md  PROJECT_LOG.md  PROJECT_ROADMAP.md  SESSION_5_VOLUME_BAR_CONFLUENCE_PROMPT.md  SESSION_LOG_2026-06-02.md  SESSION_LOG_2026-06-03.md  SESSION_LOG_2026-06-04.md  SESSION_LOG_2026-06-05.md  SESSION_LOG_2026-06-08.md  SESSION_LOG_2026-06-10.md  SESSION_LOG_2026-06-10_OPTIMIZATION.md  V555_3_PHASE_PLAN.md  V555_BUILD_ORDER.md  V555_FOOTPRINT_F1_F5_SPEC.md  V555_REMEDIATION_PLAN_20260602.md  V720_NAUTILUS_PRIME_PATCHES.md  V72_ACTIVE_SPEC.md  V72_STAGED_BUILD.md  V73_SUB_AGENT_RESEARCH_SYNTHESIS.md  V73_WIN_RATE_PROGRAM.md  V74_AUCTION_STATE_ENGINE_BLUEPRINT.md  V75_MASTER_ROADMAP.md  V76_SWOT_EDGE_ROADMAP.md  V77_IMPROVEMENT_ROADMAP.md  V80_HONEST_ALPHA_LAB.md  V81_INSTITUTIONAL_MICROSTRUCTURE_LAB.md  V82_1_QWEN_VALIDATION_ADDENDUM.md  V82_QWEN_DEEP_RESEARCH.md  V82_TOXICITY_MANIPULATION_EXECUTION_PIPELINE.md  V8_4_STRATEGY_IMPLEMENTATION.md  v90_ALPHA_REBUILD_DECISION.md  v92_DATA_FIRST_ALPHA_PLAN.md  v92_STRATEGY_MEMORY_LEDGER.md
examples/: sample_books.csv  sample_trades.csv
execution/: __init__.py  dom_timing.py  nautilus_adapter.py  realism.py
features/: __init__.py  mlofi.py  snapshots.py  vpin.py
memory/: __init__.py  setup_summary.py
orchestration/: __init__.py  hermes_cli_bridge.py
prime/: __init__.py  (+23 more)
(+313 files in other folders)
